@@ -6,7 +6,8 @@
 
 	* inst/tinytest/testRaw.R: Converted from tests/raw.R
 	* inst/tinytest/testCRC32.R: Converted from tests/crc32.R
-	* inst/tinytest/testDigest2Int.R: Conv. from tests/digest2int.R
+	* inst/tinytest/testDigest2Int.R: From tests/digest2int.R
+	* inst/tinytest/testNum2Hex.R: From tests/num2hexTest.R
 
 2019-05-19  Dirk Eddelbuettel  <edd@debian.org>
 
